--- a/.github/workflows/test_log.yml
+++ b/.github/workflows/test_log.yml
@@ -14,7 +14,7 @@ jobs:
     steps : 
       - name : log 테스트
         run : |
-          print('log 테스트')
+          print("log 테스트")
 
     # steps:
     # # 1. 환경 설정
