--- a/.github/workflows/test_log.yml
+++ b/.github/workflows/test_log.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # UTC 기준 03:00는 한국 시간 12:00입니다.
     # 월요일(1), 일요일(0) 12시에 실행
-    - cron: '*/5 * * * *'
+    - cron: '*/2 * * * *'
   workflow_dispatch: # 버튼 눌러서 수동 실행 (필수!)
     inputs:
       log_message:
@@ -39,6 +39,8 @@ jobs:
       - name : 토요일
         if : github.event.schedule == '* * * * 6'
         run : echo "sat"
+      - name : 실패시
+        run : echo ${ { github.event.schedule } }
 
     # steps:
     # # 1. 환경 설정
