--- a/.github/workflows/test_log.yml
+++ b/.github/workflows/test_log.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # UTC 기준 03:00는 한국 시간 12:00입니다.
     # 월요일(1), 일요일(0) 12시에 실행
-    - cron: '*/5 * * * *'
+    - cron: '0,30 * * * *'
     
 permissions:
   contents: write
