--- a/.github/workflows/test_log.yml
+++ b/.github/workflows/test_log.yml
@@ -43,7 +43,7 @@ jobs:
         if : github.event.schedule == '* * * * 6'
         run : echo "sat"
       - name : 실패시
-        run : echo env.DAY_OF_WEEK
+        run : echo "${{ env.DAY_OF_WEEK }}"
 
     # steps:
     # # 1. 환경 설정
